fix(render): authorize project discovery and every job read before disclosure